# fractal

./: .gitignore  README.md  justfile  pyproject.toml  requirements.txt
documentation/models/config/: README.md
documentation/models/config/Models/: Config.md  ConfigPeano.md
documentation/models/peano/: README.md
documentation/models/peano/Models/: EnumMatrixPlotOrientation.md  PlotSettings.md  PlotSettingsAspect.md
examples/: README.md  example.py  example_open_source.py  mock.py
src/r_open_fractal/: __init__.py
src/r_open_fractal/assets/: config-peano.yaml
src/r_open_fractal/core/: utils.py
src/r_open_fractal/models/: config-schema.yaml  peano-schema.yaml
src/r_open_fractal/models/peano/: __init__.py  constants.py  geometry.py  methods.py  visualise.py
src/r_open_fractal/setup/: __init__.py  config.py
