[project]
name = 'r_open_fractal'
version = '0.0.0'
description = 'A package for methods for generating fractals'
authors = [
    { name = 'raj-open', email='raj-open@noreply.users.github.com' },
]
maintainers = [
    { name = 'raj-open', email='raj-open@noreply.users.github.com' },
]
license = { file = 'LICENCE' }
readme = 'README.md'
requires-python = '>=3.10'
keywords = [
    'python',
    'plots',
    'histogram',
    'csv',
]
# cf. https://pypi.org/classifiers
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
# NOTE: cf. requirements.txt
# NOTE do not use == in pyproject.toml only in requirements.txt
dependencies = [
    'pip>=23.1.2',
    'wheel>=0.40.0',
    # 'hatchling>=1.17.0',
    'setuptools>=67.8.0',
    # code
    'pathlib>=1.0.1',
    'safetywrap>=1.5.0',
    'typing>=3.7.4.3',
    'typing-extensions>=4.6.2',
    'asyncio>=3.4.3',
    'codetiming>=1.4.0',
    # config
    'python-dotenv>=1.0.0',
    'jsonschema>=4.17.3',
    'lazy-load>=0.8.3',
    'pyyaml>=6.0',
    # models
    'dataclasses>=0.6',
    'pydantic>=1.10.8',
    # maths + data
    'numpy>=1.24.3',
    'pandas>=2.0.1',
    'tabulate>=0.9.0',
    # images
    'imageio>=2.29.0',
    'matplotlib>=3.7.1',
    # miscellaneous
    'lorem>=0.1.1',
]

[build-system]
requires = [ 'setuptools>=67.8.0' ]
build-backend = 'setuptools.build_meta'

[project.urls]
homepage = 'https://github.com/raj-open/fractal'

[tool.setuptools.packages.find]
where = [ 'src' ]
include = [ 'r_open_fractal*' ]
namespaces = true

[project.optional-dependencies]
# NOTE: cf. requirements.txt
# Currently no way to have one source of truth.
test = [
    'coverage[toml]>=7.2.6',
    'pytest-cov>=4.1.0',
    'pytest-lazy-fixture>=0.6.3',
    'pytest-order>=1.1.0',
    'pytest>=7.3.1',
    'testfixtures>=7.1.0',
]
dev = [
    # NOTE: depends on name of project!
    'r_open_fractal[test]',
    # further tools
    'datamodel-code-generator>=0.19.0',
    'openapi-generator-cli>=4.3.1',
    'openapi-generator>=1.0.6',
]

[tool.pytest.ini_options]
minversion = '7.3.1'
testpaths = [
    'tests',
]
python_files = [
    '**/tests_*.py',
]
asyncio_mode = 'auto'
filterwarnings = [
    'error',
    'ignore::UserWarning',
    'ignore::DeprecationWarning',
]
# NOTE: appends (not prepends) flags:
addopts = [
    '--order-dependencies',
    '--order-group-scope=module',
    '--cache-clear',
    '--verbose',
    '--maxfail=1',
    '-k test_',
    # NOTE: will be ignored, if --cov not used (e.g. integration tests):
    '--no-cov-on-fail',
    '--cov-report=term',
    '--cov-config=.coveragerc',
    # NOTE: for development purposes only:
    # '-s', # verbose print/err capturing disabled
    # '--capture=tee-sys', # verbose print/err capturing enabled
]
